# CIS-25

./: .gitignore  LICENSE  README.md
.github/workflows/: kitchen-calculator-ci.yml
AgeGroupClassifier/AgeGroupClassifier/: AgeGroupClassifier.cpp
AgeGroupClassifier1/AgeGroupClassifier1/: AgeGroupClassifier1.cpp
Kitchen Calculator/Kitchen Calculator/: CMakeLists.txt  Kitchen Calculator.cpp  Kitchen Calculator.h  Nan_review_tests.cpp  README.md  Source.cpp  code-review-by-NanSayng.md  convertUnit.cpp  convertUnit.h  displayResult.cpp  displayResult.h  inputAmount.cpp  inputAmount.h  inputDesired.cpp  inputDesired.h  inputStart.cpp  intoFL.cpp  intoFL.h  main.cpp
Kitchen Calculator/Kitchen Calculator/.github/workflows/: cross-platform-ci.yml  kitchen-calculator-ci.yml  kitchen-calculator-ci.yml.txt
Kitchen Calculator/Kitchen Calculator/include/: getValidInput.h  inputAmount.h
Kitchen Calculator/Kitchen Calculator/src/: display.cpp  displayResult.cpp  inputAmount.cpp  intoFL.cpp
Kitchen Calculator/Kitchen Calculator/test/: test_main.cpp
Kitchen Calculator/Kitchen Calculator/utils/: convertUnit.cpp  convertUnit.h  getValidInput.cpp  inputAmount.cpp  inputDesired.cpp  inputStart.h
Kitchen Calculator/Kitchen Calculator/x64/Debug/: Kitchen Calculator.exe.recipe  Kitchen Calculator.ilk  vc143.idb
Kitchen Calculator/Kitchen Calculator/x64/Debug/Kitchen .faa43188.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Kitchen Calculator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
(+115 files in other folders)
